# skills-experiments

./: README.md  experiment_plan.md  proposal.md  pyproject.toml  run_benchmark.sh  standard-skills-library-proposal.md
bundled-skills-snapshot/cost-management/: SKILL.md
bundled-skills-snapshot/data-governance/: SKILL.md
bundled-skills-snapshot/data-quality/: SKILL.md
bundled-skills-snapshot/lineage/: SKILL.md
bundled_skills/dbt-projects-on-snowflake/: SKILL.md
bundled_skills/snowconvert-assessment/: SKILL.md
experiment_sets/: plugin-sets.yaml  task-sets.yaml
experiments/001_bundled-vs-standard/: agents.md  experiment_log.md  report.md
experiments/002_cursor-vs-cortex/: analyze_transcript.py  cortex_export_prompt.md  experiment_plan.md  fixtures.sql  reset.sql
results/: dashboard.html
sfbench/: __init__.py  cli.py
sfbench/agents/: base.py  claude.py  cursor.py  plugins.py  sage.py
sfbench/evaluator/: dashboard.py  llm.py  report.py  sql.py
sfbench/models/: task.py  transcript.py  trial.py
sfbench/orchestrator/: runner.py
sfbench/runner/: trial.py
sfbench/sandbox/: manager.py  snowflake.py
snowflake-standard-skills-library/: README.md  router.md
snowflake-standard-skills-library/spec/: authoring-guide.md
standard-skills-library/: README.md  SKILL.md  index.yaml
standard-skills-library/scripts/: snow-sql
standard-skills-library/spec/: authoring-guide.md  controlled-vocabulary.md  extending-routers.md  skill-schema.md  standard-skills-library.md
summaries/: 02-24-26-brief.md
tasks/adversarial_001/: task.yaml
(+265 files in other folders)
